--- a/.github/workflows/9999main.yml
+++ b/.github/workflows/9999main.yml
@@ -16,14 +16,16 @@ jobs:
           sudo tailscale up
       - name: đang setup windows
         run: |
+          mkdir sdb1
+          sudo mount /dev/sdb1 ./sdb1
           sudo chmod 666 /dev/kvm
           echo "dang tai windows"
-          sudo wget -O /mnt/file.qcow2 "https://app.vagrantup.com/linuxusersfake/boxes/win11modrdpwf/versions/1.0/providers/qemu/amd64/vagrant.box" &>/dev/null &
+          sudo wget -O file.qcow2 "https://go.microsoft.com/fwlink/?linkid=2268774&clcid=0x409&culture=en-us&country=us" &>/dev/null &
           while ps axg | grep -vw grep | grep -w wget > /dev/null; do sleep 1; done
           echo "thanh cong"
           tailscale ip -4
           echo "dang nhap voi port 3389"
           echo "neu muon view console dang nhap voi port 5900"
-          sudo cpulimit -l 75 -- sudo kvm -M q35,usb=on -device usb-tablet -cpu host -smp 2,cores=2 -m 8G -device virtio-balloon-pci -vga qxl -net nic,netdev=n0 -netdev user,id=n0,hostfwd=tcp::3389-:3389 -boot c -device virtio-serial-pci -device virtio-rng-pci -enable-kvm -drive file=/mnt/file.qcow2,if=virtio -vnc :0 -bios /usr/share/ovmf/OVMF.fd
+          sudo cpulimit -l 75 -- sudo kvm -M q35,usb=on -device usb-tablet -cpu host -smp 2,cores=2 -m 8G -device virtio-balloon-pci -vga qxl -net nic,netdev=n0 -netdev user,id=n0,hostfwd=tcp::3389-:3389 -boot c -device virtio-serial-pci -device virtio-rng-pci -enable-kvm -drive file=./file.qcow2,if=virtio -vnc :0 -bios /usr/share/ovmf/OVMF.fd
           while ps axg | grep -vw grep | grep -w qemu-system-x86_64 > /dev/null; do sleep 1; done
           while ps axg | grep -vw grep | grep -w kvm > /dev/null; do sleep 1; done
