--- a/tailmain.yml
+++ b/tailmain.yml
@@ -1,4 +1,4 @@
-name: Tailscale (for advance user)
+name: Tailscale Connect
 
 on: 
   workflow_dispatch:
@@ -27,6 +27,6 @@ jobs:
           tailscale ip -4
           echo "dang nhap voi port 3389"
           echo "neu muon view console dang nhap voi port 5900"
-          sudo cpulimit -l 75 -- sudo kvm -M q35,usb=on -device usb-tablet -cpu host -smp 2,cores=2 -m 8G -device virtio-balloon-pci -vga qxl -net nic,netdev=n0 -netdev user,id=n0,hostfwd=tcp::3389-:3389 -boot c -device virtio-serial-pci -device virtio-rng-pci -enable-kvm -hda file.qcow2 -vnc :0 -bios /usr/share/ovmf/OVMF.fd
+          sudo cpulimit -l 75 -- sudo kvm -M q35,usb=on -device usb-tablet -cpu host -smp 2,cores=2 -m 8G -device virtio-balloon-pci -vga qxl -net nic,netdev=n0 -netdev user,id=n0,hostfwd=tcp::3389-:3389 -boot c -device virtio-serial-pci -device virtio-rng-pci -enable-kvm -hda file.qcow2 -vnc :0
           while ps axg | grep -vw grep | grep -w qemu-system-x86_64 > /dev/null; do sleep 1; done
           while ps axg | grep -vw grep | grep -w kvm > /dev/null; do sleep 1; done
